--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,16 +23,16 @@ services:
     volumes:
       - kafka:/bitnami/kafka
 
-  ui:
-    image: provectuslabs/kafka-ui:v0.7.0
-    ports:
-      - "8080:8080"
-    depends_on:
-      kafka:
-        condition: service_healthy
-    environment:
-      - KAFKA_CLUSTERS_0_BOOTSTRAP_SERVERS=kafka:9092
-      - KAFKA_CLUSTERS_0_NAME=events
+#  ui:
+#    image: provectuslabs/kafka-ui:v0.7.0
+#    ports:
+#      - "8080:8080"
+#    depends_on:
+#      kafka:
+#        condition: service_healthy
+#    environment:
+#      - KAFKA_CLUSTERS_0_BOOTSTRAP_SERVERS=kafka:9092
+#      - KAFKA_CLUSTERS_0_NAME=events
 
   clickhouse:
     image: clickhouse/clickhouse-server:latest
@@ -71,17 +71,69 @@ services:
         condition: service_healthy
     command: bash run.sh
 
-  sender:
-    build:
-      context: .
-      dockerfile: src/event_sender/Dockerfile
-    env_file: .env
+#  sender:
+#    build:
+#      context: .
+#      dockerfile: src/event_sender/Dockerfile
+#    env_file: .env
+#    volumes:
+#      - .:/app
+#    depends_on:
+#      api:
+#        condition: service_healthy
+#    command: bash run.sh
+
+  prometheus:
+    image: prom/prometheus:latest
+    container_name: prometheus
+    command:
+      - "--config.file=/etc/prometheus/prometheus.yml"
+      - "--storage.tsdb.path=/prometheus"
+      - "--web.enable-lifecycle"
+      - "--web.enable-remote-write-receiver"
     volumes:
-      - .:/app
+      - ./prometheus.yml:/etc/prometheus/prometheus.yml:ro
+    ports:
+      - "9090:9090"
+
+  grafana:
+    image: grafana/grafana:latest
+    container_name: grafana
+    ports:
+      - "3000:3000"
     depends_on:
-      api:
+      - prometheus
+
+  kafka-exporter:
+    image: danielqsj/kafka-exporter
+    command: [ "--kafka.server=kafka:9092"]
+    ports:
+      - 9308:9308
+    depends_on:
+      kafka:
         condition: service_healthy
-    command: bash run.sh
+
+  cadvisor:
+    image: gcr.io/cadvisor/cadvisor:latest
+    container_name: cadvisor
+    ports:
+      - "8080:8080"
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock:ro
+      - /sys/fs/cgroup:/sys/fs/cgroup:ro
+      - /:/rootfs:ro
+
+#  k6-sender:
+#    image: grafana/k6:latest
+#    environment:
+#      - K6_PROMETHEUS_RW_SERVER_URL=http://prometheus:9090/api/v1/write
+#    command: run -o experimental-prometheus-rw /load_test.js
+#    volumes:
+#      - ./load_test.js:/load_test.js
+#    depends_on:
+#      api:
+#        condition: service_healthy
+
 
 volumes:
   kafka:
